# golubin-gbot

./: .env.example  .gitignore  README.md  composer.json
app/Models/: Category.php  GlobalSetting.php  Keyword.php  Message.php  NegativeKeyword.php  Permission.php  Role.php  TelegramLink.php
database/migrations/: 2024_05_05_153627_create_categories_table.php  2024_05_05_154034_create_telegram_links_table.php  2024_05_08_154034_create_category_telegram_link_table.php  2024_05_29_154034_create_keywords_table.php  2024_06_05_190323_create_messages_table.php  2024_06_05_191045_create_category_message_table.php  2024_06_06_031342_add_columns_to_telegram_links_table.php  2024_06_07_131236_add_column_invalid_to_telegram_links_table.php  2024_06_07_143021_create_negative_keywords_table.php  2024_11_14_073055_add_column_parser_account_id_to_telegram_links_table.php  2024_11_28_074818_create_global_settings_table.php  2024_11_29_074634_add_global_search_column_to_categories_table.php  2025_01_29_073340_add_column_created_at_updated_at_to_category_telegram_link_table.php  2025_03_17_183926_add_is_private_to_telegram_links_table.php
database/seeders/: CategorySeeder.php  DatabaseSeeder.php  KeywordsSeeder.php  LinksFromDevSeeder.php  RolePermissionSeeder.php  UpdateTelegramLinksSeeder.php  UserSeeder.php
py/Golubin-parsing-chats/: main.py  poetry.lock.back  pyproject.toml  unknown_errors.txt
py/Golubin-parsing-chats/src/: config.py  helpers.py  logger.py
py/Golubin-parsing-chats/src/database/: connection.py  models.py  models_prod.py  operations.py
routes/: api.php
(+20 files in other folders)
