[tool.poetry]
name = "golubin-parsing-chats"
version = "0.1.0"
description = ""
authors = ["Ilia Klimov <infuzer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tgcrypto = "^1.2.5"
uvloop = "^0.19.0"
sqlmodel = "0.0.22"
pyrogram = {git = "https://github.com/KurimuzonAkuma/pyrogram.git"}
psycopg2-binary = "^2.9.9"
async-lru = "^2.0.4"
pydantic-settings = "^2.3.2"
requests = "^2.32.3"
pymysql = "^1.1.1"
scikit-learn = "^1.5.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
